--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,21 @@
-attrs==24.2.0
-blinker==1.9.0
-cattrs==24.1.2
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-crisprbrain==0.6.1
-dash==2.18.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-Flask==3.0.3
-idna==3.10
-importlib_metadata==8.5.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-nest-asyncio==1.6.0
-numpy==2.1.3
-packaging==24.2
-pandas==2.2.3
-platformdirs==4.3.6
-plotly==5.24.1
+biopython==1.76
+configparser==4.0.2
+contextlib2==0.6.0.post1
+distlib==0.3.8
+filelock==3.2.1
+importlib-metadata==2.1.3
+importlib-resources==3.3.1
+numpy==1.16.6
+pandas==0.24.2
+pathlib2==2.3.7.post1
+platformdirs==2.0.2
 python-dateutil==2.9.0.post0
 pytz==2024.2
-requests==2.32.3
-requests-cache==1.2.1
-retrying==1.3.4
-setuptools==75.6.0
+scandir==1.10.0
+scikit-learn==0.18.1
+scipy==1.2.3
+singledispatch==3.7.0
 six==1.16.0
-tenacity==9.0.0
-typing_extensions==4.12.2
-tzdata==2024.2
-url-normalize==1.4.3
-urllib3==2.2.3
-Werkzeug==3.0.6
-zipp==3.21.0
+typing==3.10.0.0
+virtualenv==20.15.1
+zipp==1.2.0
