--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-polars = { version = "0.44.2", features = [ "csv", "lazy","strings"] }
+polars = { version = "0.44.2", features = [ "csv", "lazy","strings"]}
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 bio-seq = "0.13.5"
+anyhow = "1.0.95"
