--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -9,3 +9,4 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 csv = "1.3.1"
 bio-seq = "0.13.5"
+serde_json = "1.0.133"
