--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-polars = { version = "0.44.2", features = [ "csv", "lazy","strings","semi_anti_join"] }
+polars = { version = "0.44.2", features = [ "csv", "lazy","strings","semi_anti_join", "regex"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 csv = "1.3.1"
