--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0.133"
 anyhow = "1.0.95"
 plotters = "0.3.7"
 plotters-svg = "0.3"
+plotters-bitmap = "0.3"
+plotters-backend = "0.3.7"
