--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -18,3 +18,10 @@ plotters-svg = "0.3"
 plotters-bitmap = "0.3"
 plotters-backend = "0.3.7"
 log = "0.4.22"
+rand_isaac = "0.4.0"
+
+ndarray = "0.15.6"
+umap = "0.1.0"
+ndarray-stats = "0.5.1"
+ndarray-linalg = "0.17.0"
+rand = "0.8.5"
