--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -21,7 +21,21 @@ log = "0.4.22"
 rand_isaac = "0.4.0"
 
 ndarray = "0.15.6"
-umap = "0.1.0"
 ndarray-stats = "0.5.1"
 ndarray-linalg = "0.17.0"
 rand = "0.8.5"
+regex = "1.11.1"
+# Add to your [dependencies] section
+sankey = "0.1.2"
+svg = "0.18.0"
+linfa = "0.7.1"
+linfa-logistic = "0.7.1"
+
+
+# Optional dependencies for PNG export
+resvg = { version = "0.45.0", optional = true }
+which = "7.0.2"
+
+# Add a features section to enable PNG export
+[features]
+png_export = ["dep:resvg"]
