--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-polars = { version = "0.46.0", features = [ "csv", "lazy","strings","semi_anti_join", "regex","dtype-array","polars-ops","abs", "round_series","polars-lazy"] }
+polars = { version = "0.46.0", features = [ "csv", "lazy","strings","semi_anti_join", "regex","dtype-array","polars-ops","abs", "round_series","polars-lazy","cov"] }
 polars-ops = "0.46.0"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
@@ -18,23 +18,28 @@ plotters-svg = "0.3"
 plotters-bitmap = "0.3"
 plotters-backend = "0.3.7"
 log = "0.4.22"
-rand_isaac = "0.4.0"
 
-ndarray = "0.15.6"
+ndarray = "0.15.0"
 ndarray-stats = "0.5.1"
-ndarray-linalg = "0.17.0"
-rand = "0.8.5"
 regex = "1.11.1"
 # Add to your [dependencies] section
 sankey = "0.1.2"
 svg = "0.18.0"
-linfa = "0.7.1"
-linfa-logistic = "0.7.1"
+rand_isaac      = { version = "0.4.0"} # <– OK to keep
+rand            = "0.8.5"          # already present
+linfa           = { version = "0.7.1" }
+linfa-logistic  = "0.7.1"
+openblas-src = { version = "0.10.11", features = ["static", "cblas", "lapacke"] }
+ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
+
+
+
 
 
 # Optional dependencies for PNG export
 resvg = { version = "0.45.0", optional = true }
 which = "7.0.2"
+serde = { version = "1.0.215", features = ["derive"] }
 
 # Add a features section to enable PNG export
 [features]
