--- a/validator/Cargo.toml
+++ b/validator/Cargo.toml
@@ -31,6 +31,7 @@ linfa           = { version = "0.7.1" }
 linfa-logistic  = "0.7.1"
 openblas-src = { version = "0.10.11", features = ["static", "cblas", "lapacke"] }
 ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
+statrs = "0.18.0"
 
 
 
@@ -42,6 +43,7 @@ which = "7.0.2"
 serde = { version = "1.0.215", features = ["derive"] }
 pyo3 = "0.25.0"
 calamine = "0.21.2"
+tempfile = "3.20.0"
 
 # Add a features section to enable PNG export
 [features]
